tambah video booth di swipe

--- a/www/index-giibf.html
+++ b/www/index-giibf.html
@@ -63,6 +63,23 @@
                         <div class="swiper-slide"><img src="img/giibf/R1.jpg"></div>
                         <div class="swiper-slide"><img src="img/giibf/R2.jpg"></div>
                         <div class="swiper-slide"><img src="img/giibf/R3.jpg"></div>
+
+                        <div class="swiper-slide">
+                        <video id="video-screensaver" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
+                        <source src="img/giibf/booth.mp4" type="video/mp4">
+                        <source src="img/start-gisbh.ogg" type="video/ogg">
+                        <source src="img/start-gisbh.webm" type="video/webm"></video>
+                        </div>
+
+                        <div class="swiper-slide">
+                        <video id="video-screensaver" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
+                        <source src="img/giibf/booth-indonesia.mp4" type="video/mp4">
+                        <source src="img/start-gisbh.ogg" type="video/ogg">
+                        <source src="img/start-gisbh.webm" type="video/webm"></video>
+                        </div>
+
+
+
                         ...
                     </div>
                     <!-- If we need pagination -->
