- add screensaver.js - how to add : <script src="js/screensaver.js"></script>

--- a/www/index-7sektor.html
+++ b/www/index-7sektor.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="css/swiper.min.css">
     <script src="js/swiper.min.js"></script>
     <script src="js/index-7sektor.js"></script>
+    <script src="js/screensaver.js"></script>
 </head>
 <body ng-controller="GISBHCtrl">
     <ion-pane>
