--- a/www/index-alp.html
+++ b/www/index-alp.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/animate.css">
     <script src="js/index-alp.js"></script>
+    <script src="js/screensaver.js"></script>
 </head>
 <body ng-controller="GISBHCtrl">
 <ion-pane>
