info graph dan produk ikhwan

--- a/www/index-infograph.html
+++ b/www/index-infograph.html
@@ -32,9 +32,6 @@
     -->
     <script src="cordova.js"></script>
     <script src="js/jquery/external/jquery/jquery.js"></script>
-    <script src="js/jquery/modal-video.min.js"></script>
-    <script src="js/jquery/jquery-modal-video.min.js"></script>
-  
     <!-- your app's js -->
 
     <!--Setup App-->
@@ -42,23 +39,19 @@
     <link rel="stylesheet" href="css/swiper.min.css">
     <script src="js/swiper.min.js"></script>
     <script src="js/index-7sektor.js"></script>
-    <script src="js/screensaver.js"></script>
 </head>
 <body ng-controller="GISBHCtrl">
     <ion-pane>
-        <ion-content class="start-sektor">
+        <ion-content class="start-infograph">
             <div class="row">
                 <div class="swiper-container">
                     <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
                         <!-- Slides -->
-                        <div class="swiper-slide"><img src="img/7sektor/1.jpg"><img id="play-video-1" src="img/7sektor/play-video.png"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/2.jpg"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/3.jpg"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/4.jpg"><img id="play-video-2" src="img/7sektor/play-video.png"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/5.jpg"><img id="play-video-3" src="img/7sektor/play-video.png"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/6.jpg"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/7.jpg"><img id="play-video-4" src="img/7sektor/play-video.png"></div>
+                        <div class="swiper-slide"><img src="img/infograph/1.jpg"></div>
+                        <div class="swiper-slide"><img src="img/infograph/2.jpg"></div>
+                        <div class="swiper-slide"><img src="img/infograph/3.jpg"></div>
+                        <div class="swiper-slide"><img src="img/infograph/4.jpg"></div>
                         ...
                     </div>
                     <!-- If we need pagination -->
