--- a/www/index-main.html
+++ b/www/index-main.html
@@ -71,10 +71,10 @@
                 </div>
                 <div class="col left-side">
                     <div>
-                        <img id="btn-menu-4" src="img/4.png" class="main-but-p3-4" style="display: none;">
+                        <img id="btn-menu-4" src="img/4.png" class="main-but-p3-4" style="display: none;" ng-click="openProdukIkhwan()">
                     </div>
                     <div>
-                        <img id="btn-menu-5" src="img/5.png" class="main-but-p3-5" style="display: none;">
+                        <img id="btn-menu-5" src="img/5.png" class="main-but-p3-5" style="display: none;" ng-click="openInfoGraph()">
                     </div>
                     <div>
                         <img id="btn-menu-6" src="img/6.png" class="main-but-p3-6" style="display: none;" ng-click="openMapPage()">
