--- a/www/index-produk-ikhwan.html
+++ b/www/index-produk-ikhwan.html
@@ -32,9 +32,6 @@
     -->
     <script src="cordova.js"></script>
     <script src="js/jquery/external/jquery/jquery.js"></script>
-    <script src="js/jquery/modal-video.min.js"></script>
-    <script src="js/jquery/jquery-modal-video.min.js"></script>
-  
     <!-- your app's js -->
 
     <!--Setup App-->
@@ -42,35 +39,20 @@
     <link rel="stylesheet" href="css/swiper.min.css">
     <script src="js/swiper.min.js"></script>
     <script src="js/index-7sektor.js"></script>
-    <script src="js/screensaver.js"></script>
 </head>
 <body ng-controller="GISBHCtrl">
     <ion-pane>
-        <ion-content class="start-sektor">
+        <ion-content class="start-giibf">
             <div class="row">
-                <div class="swiper-container">
                     <!-- Additional required wrapper -->
-                    <div class="swiper-wrapper">
-                        <!-- Slides -->
-                        <div class="swiper-slide"><img src="img/7sektor/1.jpg"><img id="play-video-1" src="img/7sektor/play-video.png"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/2.jpg"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/3.jpg"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/4.jpg"><img id="play-video-2" src="img/7sektor/play-video.png"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/5.jpg"><img id="play-video-3" src="img/7sektor/play-video.png"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/6.jpg"></div>
-                        <div class="swiper-slide"><img src="img/7sektor/7.jpg"><img id="play-video-4" src="img/7sektor/play-video.png"></div>
-                        ...
-                    </div>
-                    <!-- If we need pagination -->
-                    <div class="swiper-pagination"></div>
+                       
+                        <video id="video-screensaver" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
+                        <source src="img/produk-ikhwan/produk-ikhwan.mp4" type="video/mp4">
+                        <source src="img/start-gisbh.ogg" type="video/ogg">
+                        <source src="img/start-gisbh.webm" type="video/webm"></video>
+                        </div>
 
-                    <!-- If we need navigation buttons -->
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
-
-                    <!-- If we need scrollbar -->
-                    <div class="swiper-scrollbar"></div>
-                </div>
+                   
             </div>
             <div class="row footer-nav">
                 <div class="col" align="left">
