--- a/www/index-infograph.html
+++ b/www/index-infograph.html
@@ -31,6 +31,7 @@
     <script src="js/ngStorage.min.js"></script>
     -->
     <script src="cordova.js"></script>
+    <script src="js/ui-bootstrap-tpls-1.0.3.js"></script> 
     <script src="js/jquery/external/jquery/jquery.js"></script>
     <!-- your app's js -->
 
@@ -38,7 +39,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/swiper.min.css">
     <script src="js/swiper.min.js"></script>
-    <script src="js/index-7sektor.js"></script>
+    <script src="js/index-infograph.js"></script>
 </head>
 <body ng-controller="GISBHCtrl">
     <ion-pane>
