--- a/www/index-giibf.html
+++ b/www/index-giibf.html
@@ -31,8 +31,9 @@
     <script src="js/ngStorage.min.js"></script>
     -->
     <script src="cordova.js"></script>
-    <script src="js/jquery/external/jquery/jquery.js"></script>
-    <!-- your app's js -->
+   <script src="js/jquery/external/jquery/jquery.js"></script>
+    <script src="js/ui-bootstrap-tpls-1.0.3.js"></script> 
+     <!-- your app's js -->
 
     <!--Setup App-->
     <link rel="stylesheet" href="index.css">
