--- a/www/index-produk-ikhwan.html
+++ b/www/index-produk-ikhwan.html
@@ -32,6 +32,8 @@
     -->
     <script src="cordova.js"></script>
     <script src="js/jquery/external/jquery/jquery.js"></script>
+    <script src="js/ui-bootstrap-tpls-1.0.3.js"></script> 
+    
     <!-- your app's js -->
 
     <!--Setup App-->
