--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,9 @@
     <script src="cordova.js"></script>
     <!-- your app's js -->
 
+<script src="js/jquery/external/jquery/jquery.js"></script>
+    
+    
     <!--Setup App-->
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/animate.css">
