--- a/www/index-giibf.html
+++ b/www/index-giibf.html
@@ -31,79 +31,76 @@
     <script src="js/ngStorage.min.js"></script>
     -->
     <script src="cordova.js"></script>
-   <script src="js/jquery/external/jquery/jquery.js"></script>
-    <script src="js/ui-bootstrap-tpls-1.0.3.js"></script> 
-     <!-- your app's js -->
+    <script src="js/jquery/external/jquery/jquery.js"></script>
+    <!-- your app's js -->
 
     <!--Setup App-->
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="css/swiper.min.css">
-    <script src="js/swiper.min.js"></script>
-    <script src="js/index-7sektor.js"></script>
+    <link rel="stylesheet" href="css/animate.css">
+    <script src="js/index-giibf.js"></script>
+    <script src="js/screensaver.js"></script>
 </head>
 <body ng-controller="GISBHCtrl">
-    <ion-pane>
-        <ion-content class="start-giibf">
+<ion-pane>
+    <div id="screensaver-place" class="screensaver-back" ng-click="screensaverOff()"></div>
+    <ion-content class="giibf-back">
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <div align="center" class="row tulisan-p3">
+        </div>
+        <div id="button-place" class="button-sektor">
             <div class="row">
-                <div class="swiper-container">
-                    <!-- Additional required wrapper -->
-                    <div class="swiper-wrapper">
-                        <!-- Slides -->
-                        <div class="swiper-slide"><img src="img/giibf/1.jpg"></div>
-                        <div class="swiper-slide"><img src="img/giibf/2.png"></div>
-                        <div class="swiper-slide"><img src="img/giibf/3.jpg"></div>
-                        <div class="swiper-slide"><img src="img/giibf/4.jpg"></div>
-                        <div class="swiper-slide"><img src="img/giibf/5.jpg"></div>
-                        <div class="swiper-slide"><img src="img/giibf/6.jpg"></div>
-                        <div class="swiper-slide"><img src="img/giibf/7.jpg"></div>
-                        <div class="swiper-slide"><img src="img/giibf/8.jpg"></div>
-                        <div class="swiper-slide"><img src="img/giibf/9.jpg"></div>
-                        <div class="swiper-slide"><img src="img/giibf/10.jpg"></div>
-                        <div class="swiper-slide"><img src="img/giibf/11.jpg"></div>
-
-                        <div class="swiper-slide"><img src="img/giibf/R1.jpg"></div>
-                        <div class="swiper-slide"><img src="img/giibf/R2.jpg"></div>
-                        <div class="swiper-slide"><img src="img/giibf/R3.jpg"></div>
-
-                        <div class="swiper-slide">
-                        <video id="video-screensaver" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
-                        <source src="img/giibf/booth.mp4" type="video/mp4">
-                        <source src="img/start-gisbh.ogg" type="video/ogg">
-                        <source src="img/start-gisbh.webm" type="video/webm"></video>
-                        </div>
-
-                        <div class="swiper-slide">
-                        <video id="video-screensaver" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
-                        <source src="img/giibf/booth-indonesia.mp4" type="video/mp4">
-                        <source src="img/start-gisbh.ogg" type="video/ogg">
-                        <source src="img/start-gisbh.webm" type="video/webm"></video>
-                        </div>
-
-
-
-                        ...
+                <div class="col right-side">
+                    <div>
+                        <img id="btn-menu-1" src="img/giibf/program.png" class="main-but-p3-1" style="display: none;" ng-click="openProgram()">
                     </div>
-                    <!-- If we need pagination -->
-                    <div class="swiper-pagination"></div>
-
-                    <!-- If we need navigation buttons -->
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
-
-                    <!-- If we need scrollbar -->
-                    <div class="swiper-scrollbar"></div>
+                    <div>
+                        <img id="btn-menu-2" class="main-but-p3-2" style="display: none;" ng-click="open7SektorPage()">
+                    </div>
+                    
+                </div>
+                <div class="col left-side">
+                    <div>
+                        <img id="btn-menu-4" src="img/giibf/galeri.png" class="main-but-p3-4" style="display: none;" ng-click="openGalery()">
+                    </div>
+                   
                 </div>
             </div>
-            <div class="row footer-nav">
-                <div class="col" align="left">
-                    <img id="back-p3" src="img/back.png" class="button-back" ng-click="openMainPage()">
-                </div>
-                <div class="col" align="right">
-                    <img id="home-p3" src="img/home.png" class="button-home" ng-click="openHomePage()">
-                </div>
+        </div>
+        <div class="row footer-nav">
+            <div class="col" align="left">
+                <img id="back-p3" src="img/back.png" class="button-back" style="display: none;">
             </div>
-            <div id="play-video-1-frame"></div>
-        </ion-content>
-    </ion-pane>
+            <div class="col" align="right">
+                <img id="home-p3" src="img/home.png" class="button-home" style="display: none;">
+            </div>
+        </div>
+    </ion-content>
+</ion-pane>
+
 </body>
 </html>
+
+<style type="text/css">
+.giibf-back {
+    background-image: url(/img/giibf/giibf.png);
+    background-size: 100% !important;
+}
+.button-sektor {
+    top: 55%;
+    left: 0;
+    width: 100%;
+    position: fixed;
+}
+</style>
