--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,10 @@
     <script src="js/screensaver.js"></script>
 </head>
 <body ng-controller="GISBHCtrl">
+    <audio autoplay preload='auto' loop id="myAudio">
+  <source src="img/bgmusik.mp3" type="audio/mpeg" >
+</audio>
+
     <ion-pane>
         <div id="screensaver-place" class="screensaver-back" ng-click="screensaverOff()">
 
