ikhwan TV dan Profile GISBH

--- a/www/index.html
+++ b/www/index.html
@@ -60,11 +60,11 @@
                         </div>
                     </div>
                     <div>
-                        <img id="logo-gisbh" src="img/gisbh-logo.png">
+                        <img ng-click="openprofile()" id="logo-gisbh" src="img/gisbh-logo.png">
                     </div>
                     <div class="col left-side">
                         <div>
-                            <img id="btn-giibf" src="img/button-giibf.png" class="main-but">
+                            <img  id="btn-giibf" src="img/button-giibf.png" class="main-but" >
                         </div>
                     </div>
                 </div>
