--- a/www/index-main.html
+++ b/www/index-main.html
@@ -41,6 +41,10 @@
     <script src="js/screensaver.js"></script>
 </head>
 <body ng-controller="GISBHCtrl">
+       <audio autoplay preload='auto' loop id="myAudio">
+  <source src="img/bgmusik.mp3" type="audio/mpeg" >
+</audio>
+
 <ion-pane>
     <div id="screensaver-place" class="screensaver-back" ng-click="screensaverOff()"></div>
     <ion-content class="start-back">
@@ -67,7 +71,7 @@
                     </div>
                 </div>
                 <div>
-                    <img id="logo-gisbh" src="img/logo-p3.png" style="display: none;">
+                    <img ng-click="openprofile()" id="logo-gisbh" src="img/logo-p3.png" style="display: none;">
                 </div>
                 <div class="col left-side">
                     <div>
