- detail halaman 10 anak syarikat

--- a/www/index-10as.html
+++ b/www/index-10as.html
@@ -56,19 +56,19 @@
                 </div>
                 <div class="col right-side">
                     <div>
-                        <img id="syarikat1" src="img/10as/1.png" style="display: none;">
+                        <img id="syarikat1" src="img/10as/1.png" style="display: none;" ng-click="openSyarikatPage(1)">
                     </div>
                     <div>
-                        <img id="syarikat2" src="img/10as/2.png" style="display: none;">
+                        <img id="syarikat2" src="img/10as/2.png" style="display: none;" ng-click="openSyarikatPage(2)">
                     </div>
                     <div>
-                        <img id="syarikat3" src="img/10as/3.png" style="display: none;">
+                        <img id="syarikat3" src="img/10as/3.png" style="display: none;" ng-click="openSyarikatPage(3)">
                     </div>
                     <div>
-                        <img id="syarikat4"src="img/10as/4.png" style="display: none;">
+                        <img id="syarikat4"src="img/10as/4.png" style="display: none;" ng-click="openSyarikatPage(4)">
                     </div>
                     <div>
-                        <img id="syarikat5" src="img/10as/5.png" style="display: none;">
+                        <img id="syarikat5" src="img/10as/5.png" style="display: none;" ng-click="openSyarikatPage(5)">
                     </div>
                 </div>
                 <div>
@@ -76,19 +76,19 @@
                 </div>
                 <div class="col left-side">
                     <div>
-                        <img id="syarikat6" src="img/10as/6.png" style="display: none;">
+                        <img id="syarikat6" src="img/10as/6.png" style="display: none;" ng-click="openSyarikatPage(6)">
                     </div>
                     <div>
-                        <img id="syarikat7" src="img/10as/7.png" style="display: none;">
+                        <img id="syarikat7" src="img/10as/7.png" style="display: none;" ng-click="openSyarikatPage(7)">
                     </div>
                     <div>
-                        <img id="syarikat8" src="img/10as/8.png" style="display: none;">
+                        <img id="syarikat8" src="img/10as/8.png" style="display: none;" ng-click="openSyarikatPage(8)">
                     </div>
                     <div>
-                        <img id="syarikat9" src="img/10as/9.png" style="display: none;">
+                        <img id="syarikat9" src="img/10as/9.png" style="display: none;" ng-click="openSyarikatPage(9)">
                     </div>
                     <div>
-                        <img id="syarikat10" src="img/10as/10.png" style="display: none;">
+                        <img id="syarikat10" src="img/10as/10.png" style="display: none;" ng-click="openSyarikatPage(10)">
                     </div>
                 </div>
             </div>
