- fix GIIBF link

--- a/www/index-giibf-program.html
+++ b/www/index-giibf-program.html
@@ -67,7 +67,7 @@
             </div>
             <div class="row footer-nav">
                 <div class="col" align="left">
-                    <img id="back-p3" src="img/back.png" class="button-back" ng-click="openMainPage()">
+                    <img id="back-p3" src="img/back.png" class="button-back" ng-click="openGiifPage()">
                 </div>
                 <div class="col" align="right">
                     <img id="home-p3" src="img/home.png" class="button-home" ng-click="openHomePage()">
