--- a/www/index-giibf.html
+++ b/www/index-giibf.html
@@ -80,10 +80,10 @@
         </div>
         <div class="row footer-nav">
             <div class="col" align="left">
-                <img id="back-p3" src="img/back.png" class="button-back" style="display: none;">
+                <img id="back-p3" src="img/back.png" class="button-back" style="display: none;" ng-click="goBack()">
             </div>
             <div class="col" align="right">
-                <img id="home-p3" src="img/home.png" class="button-home" style="display: none;">
+                <img id="home-p3" src="img/home.png" class="button-home" style="display: none;" ng-click="goHome()">
             </div>
         </div>
     </ion-content>
