--- a/www/index-ikhwantv.html
+++ b/www/index-ikhwantv.html
@@ -51,14 +51,14 @@
                         
                         <div class="swiper-slide">
                         <video id="video-screensaver" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
-                        <source src="img/giibf/galeri/booth.mp4" type="video/mp4">
+                        <source src="img/ikhwantv/tvi-1.mp4" type="video/mp4">
                         <source src="img/start-gisbh.ogg" type="video/ogg">
                         <source src="img/start-gisbh.webm" type="video/webm"></video>
                         </div>
 
                         <div class="swiper-slide">
                         <video id="video-screensaver" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
-                        <source src="img/giibf/galeri/booth-indonesia.mp4" type="video/mp4">
+                        <source src="img/ikhwantv/tvi-2.mp4" type="video/mp4">
                         <source src="img/start-gisbh.ogg" type="video/ogg">
                         <source src="img/start-gisbh.webm" type="video/webm"></video>
                         </div>
