profile dan tv ikhwan

--- a/www/index-ikhwantv.html
+++ b/www/index-ikhwantv.html
@@ -50,14 +50,14 @@
                     <div class="swiper-wrapper">
                         
                         <div class="swiper-slide">
-                        <video id="video-screensaver" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
+                        <video id="video-screensaver" loop control="true" width="100%" height="100%" poster="img/screen-saver.png"  preload autoplay >
                         <source src="img/ikhwantv/tvi-1.mp4" type="video/mp4">
                         <source src="img/start-gisbh.ogg" type="video/ogg">
                         <source src="img/start-gisbh.webm" type="video/webm"></video>
                         </div>
 
                         <div class="swiper-slide">
-                        <video id="video-screensaver" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
+                        <video id="video-screensaver" loop control="true"  width="100%" height="100%" poster="img/screen-saver.png"  preload  >
                         <source src="img/ikhwantv/tvi-2.mp4" type="video/mp4">
                         <source src="img/start-gisbh.ogg" type="video/ogg">
                         <source src="img/start-gisbh.webm" type="video/webm"></video>
@@ -79,7 +79,7 @@
             </div>
             <div class="row footer-nav">
                 <div class="col" align="left">
-                    <img id="back-p3" src="img/back.png" class="button-back" ng-click="openMainPage()">
+                    <img id="back-p3" src="img/back.png" class="button-back" ng-click="openHomePage()">
                 </div>
                 <div class="col" align="right">
                     <img id="home-p3" src="img/home.png" class="button-home" ng-click="openHomePage()">
