--- a/www/index.html
+++ b/www/index.html
@@ -75,6 +75,16 @@
                     </div>
                     <div class="col left-side"></div>
                 </div>
+
+                 <div class="row">
+                    <div class="col right-side"></div>
+                    <div>
+                        <img  ng-click="openikhwanTV()" id="btn-giibf" src="img/ikhwantv-button.png" class="main-but" >
+                    </div>
+                    <div class="col left-side"></div>
+                </div>
+
+
             </div>
         </ion-content>
     </ion-pane>
