--- a/www/index-profile-gisbh.html
+++ b/www/index-profile-gisbh.html
@@ -48,7 +48,7 @@
             <div class="row">
                     <!-- Additional required wrapper -->
                        
-                        <video id="video-screensaver" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
+                        <video id="video-screensaver" loop  width="100%" height="100%" poster="img/screen-saver.png"  preload autoplay >
                         <source src="img/profile/profile-gisbh.mp4" type="video/mp4">
                         <source src="img/start-gisbh.ogg" type="video/ogg">
                         <source src="img/start-gisbh.webm" type="video/webm"></video>
@@ -58,7 +58,7 @@
             </div>
             <div class="row footer-nav">
                 <div class="col" align="left">
-                    <img id="back-p3" src="img/back.png" class="button-back" ng-click="openMainPage()">
+                    <img id="back-p3" src="img/back.png" class="button-back" ng-click="openHomePage()">
                 </div>
                 <div class="col" align="right">
                     <img id="home-p3" src="img/home.png" class="button-home" ng-click="openHomePage()">
