- New image map and sektor

--- a/www/index-produk-ikhwan.html
+++ b/www/index-produk-ikhwan.html
@@ -48,7 +48,7 @@
             <div class="row">
                     <!-- Additional required wrapper -->
                        
-                        <video id="video-screensaver" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
+                        <video id="video-screensaver" loop width="100%" height="100%" poster="img/screen-saver.png" muted preload autoplay >
                         <source src="img/produk-ikhwan/produk-ikhwan.mp4" type="video/mp4">
                         <source src="img/start-gisbh.ogg" type="video/ogg">
                         <source src="img/start-gisbh.webm" type="video/webm"></video>
