- fix video id and controls

--- a/www/index-ikhwantv.html
+++ b/www/index-ikhwantv.html
@@ -50,17 +50,17 @@
                     <div class="swiper-wrapper">
                         
                         <div class="swiper-slide">
-                        <video id="video-screensaver" loop control="true" width="100%" height="100%" poster="img/screen-saver.png"  preload autoplay >
+                        <video id="video-1" loop controls="true" width="100%" height="100%" poster="img/screen-saver.png"  preload autoplay >
                         <source src="img/ikhwantv/tvi-1.mp4" type="video/mp4">
-                        <source src="img/start-gisbh.ogg" type="video/ogg">
-                        <source src="img/start-gisbh.webm" type="video/webm"></video>
+                        <source src="img/ikhwantv/tvi-1.ogg" type="video/ogg">
+                        <source src="img/ikhwantv/tvi-1.webm" type="video/webm"></video>
                         </div>
 
                         <div class="swiper-slide">
-                        <video id="video-screensaver" loop control="true"  width="100%" height="100%" poster="img/screen-saver.png"  preload  >
+                        <video id="video-2" loop controls="true"  width="100%" height="100%" poster="img/screen-saver.png"  preload  autoplay>
                         <source src="img/ikhwantv/tvi-2.mp4" type="video/mp4">
-                        <source src="img/start-gisbh.ogg" type="video/ogg">
-                        <source src="img/start-gisbh.webm" type="video/webm"></video>
+                        <source src="img/ikhwantv/tvi-1.ogg" type="video/ogg">
+                        <source src="img/ikhwantv/tvi-1.webm" type="video/webm"></video>
                         </div>
 
 
